<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.psyyf2.parent.HomeworkDetail">

    <LinearLayout
        android:id="@+id/log"
        android:layout_width="329dp"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="vertical"

        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="0dp">

        <TextView
            android:id="@+id/hometitle2"
            android:layout_width="230dp"
            android:layout_height="40dp"
            android:layout_marginBottom="30dp"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:layout_marginTop="30dp"
            android:background="@drawable/bg_edittext"
            android:drawableRight="@drawable/ic_assignment1"
            android:textAlignment="center"
            android:textAppearance="@style/TextAppearance.AppCompat.Small"
            tools:ignore="MissingConstraints"
            tools:layout_editor_absoluteX="31dp"
            tools:layout_editor_absoluteY="16dp" />

        <TextView
            android:id="@+id/homedescription2"
            android:layout_width="230dp"
            android:layout_height="140dp"
            android:layout_marginBottom="10dp"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:background="@drawable/bg_edittext"
            android:textAlignment="center"
            tools:ignore="MissingConstraints"
            tools:layout_editor_absoluteX="31dp"
            tools:layout_editor_absoluteY="84dp" />

        <CheckBox
            android:id="@+id/checkBox2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="70dp"
            android:text="Finished" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="40dp"
            android:layout_marginRight="15dp"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btnsave"
                style="@style/Widget.AppCompat.Button.Colored"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                android:layout_marginRight="30dp"
                android:layout_weight="1"
                android:background="@drawable/edit_color"
                android:text="Save" />

            <Button
                android:id="@+id/btncancel"
                style="@style/Widget.AppCompat.Button.Colored"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="50dp"
                android:layout_weight="1"
                android:background="@drawable/edit_color"
                android:text="Cancel" />
        </LinearLayout>


    </LinearLayout>

</android.support.constraint.ConstraintLayout>
