<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/item1"
        android:icon="@mipmap/ic_cached"
        android:title="item1"

        app:showAsAction="always"
        />

    <item
        android:id="@+id/item2"
        android:icon="@mipmap/ic_home"
        android:title="item2"
        app:showAsAction="ifRoom"
        />

</menu>