<?xml version="1.0" encoding="utf-8"?>
<resources>
        <string-array name="Subject">
            <item>Please select subject</item>
            <item>Math</item>
            <item>English </item>
            <item>Physics</item>
            <item>Chemistry</item>
            <item>Computer Science</item>
        </string-array>
</resources>